--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
 @import 'bootstrap';
+@import 'components';
 
-body {
-    background-color: #222222;
-    color: #ffffff;
+* {
+  font-family: 'Lato', sans-serif;
 }
