finalização parcial da landing page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -32,6 +32,7 @@ $spacer: 1rem;
 $awe-spacers: (
   "8":   $spacer * 0.5,
   "16":  $spacer,
+  "24":  $spacer * 1.5,
   "32":  $spacer * 2,
   "36":  $spacer * 2.25,
   "40":  $spacer * 2.5,
