--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,3 +4,12 @@
 * {
   font-family: 'Lato', sans-serif;
 }
+
+//fonsts
+.ff-poppins {
+  font-family: 'Poppins', sans-serif;
+}
+
+#funcionalidades, #contato {
+  background: #f9f9f9;
+}
