--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -19,3 +19,33 @@
     color: $blue-1;
   }
 }
+
+.button-3 {
+  background: $blue-1;
+  color: white;
+  border-radius: 10px;
+  padding: 12px 48px;
+  border: 0;
+}
+
+#depoimentos {
+  .swiper-button-prev, .swiper-button-next {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #06246910;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background-image: url(/dist/img/svg/arrow-btn.svg);
+    background-repeat: no-repeat;
+    background-position: 47%;
+    top: 36%;
+    &::after, &::before {
+      display: none;
+    }
+  }
+  .swiper-button-next {
+    transform: rotate(180deg);
+  }
+}
