--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -25,3 +25,14 @@
   background: #F2F5F7;
   border: 1px solid #C2D1D9;
 }
+
+#depoimentos {
+  .swiper-slide .card-slide {
+    width: 545px;
+    height: 158px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding: 32px;
+  }
+}
