--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -22,3 +22,185 @@
     height: 216%;
   }
 }
+
+#cadastro form {
+  width: 470px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background: $white;
+  padding: 64px;
+
+  h2, h2 label {
+    font-size: 1rem;
+    font-weight: 400;
+    color: $dark-2;
+    margin: 0;
+  }
+
+  label {
+    color: $light-3;
+    font-size: 1rem;
+    font-weight: 500;
+    user-select: none;
+    cursor: pointer;
+  }
+
+  input[type=text], input[type=email], input[type=password] {
+    all: unset;
+    border: 1px solid #C4C4C4;
+    color: $light-3;
+    font-weight: 700;
+    padding: 12px;
+    border-radius: 8px;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 1rem * 0.875;
+    &::placeholder {
+      color: #C8C8C8;
+    }
+    &:focus {
+      border: 1px solid $light-3;
+    }
+  }
+
+  .eye {
+    cursor: pointer;
+    position: absolute;
+    right: 12px;
+    width: 22px;
+    height: 22px;
+    background-color: $white;
+    &.open-eye {
+      background-image: url(/dist/img/svg/open-eye.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+    &.closed-eye {
+      background-image: url(/dist/img/svg/closed-eye.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+
+  input[type=radio] {
+    all: unset;
+    cursor: pointer;
+    display: block;
+    outline: 1px solid $light-3;
+    width: 16px;
+    height: 16px;
+    padding: 2px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    position: relative;
+    &:checked {
+      outline: 1px solid $blue-1; 
+      &::after {
+        content: "";
+        display: block;
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        background: $blue-1;
+      }
+      & + label {
+        color: $blue-1;
+      }
+    }
+  }
+
+  input[type=date] {
+    all: unset;
+    padding: 12px;
+    border: 1px solid #C4C4C4;
+    border-radius: 8px;
+    width: 100%;
+    color: #6b6b6b;
+  }
+
+  input[type=checkbox] {
+    all: unset;
+    cursor: pointer;
+    display: block;
+    border: 1px solid $light-3;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    box-sizing: border-box;
+    &:checked {
+      background-color: $blue-1;
+      border: 1px solid $blue-1;
+      background-image: url(/dist/img/svg/done.svg);
+      background-repeat: no-repeat;
+      background-position: center center;
+      & + label {
+        color: $blue-1;
+      }
+    }
+  }
+
+  button[type=submit] {
+    all: unset;
+    padding: 12px;
+    box-sizing: border-box;
+    border-radius: 100px;
+    width: 100%;
+    color: $white;
+    font-size: 1rem * 0.875;
+    font-weight: 700;
+    text-align: center;
+    background: $blue-1;
+    cursor: pointer;
+    &:disabled {
+      background: #313131;
+      cursor: auto;
+    }
+  }
+
+  .form__required {
+    color: #DB0000;
+  }
+
+  .form__division {
+    padding: 24px 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    span {
+      font-size: 1rem * 0.75;
+      color: $dark-4;
+      display: inline-block;
+      padding: 0 16px;
+      background: $white;
+      z-index: 100;
+    }
+    &::before {
+      content: "";
+      background: #EBEBEB;
+      display: block;
+      height: 1px;
+      width: 100%;
+      position: absolute;
+      top: 50%;
+    }
+  }
+
+  .form__obs {
+    font-size: 1rem * 0.75;
+    font-style: italic;
+    padding-top: 8px;
+    color: $light-3;
+  }
+
+  ul.field__requires {
+    font-size: 1rem * 0.75;
+    color: #848484;
+    font-weight: 700;
+    padding-left: 16px;
+    margin: 0;
+    li::marker {
+      width: 10px;
+    }
+  }
+
+}
