--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,13 @@
+@import '../../node_modules/swiper/swiper-bundle.css';
 @import 'bootstrap';
 @import 'components';
 
 * {
   font-family: 'Lato', sans-serif;
+}
+
+img {
+  user-select: none;
 }
 
 //fonsts
@@ -14,3 +19,13 @@
   background: #f9f9f9;
 }
 
+#cadastro {
+  .logo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-top: 128px;
+    position: sticky;
+    top: 128px;
+  }
+}
