--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 // colors
 $blue-1: #001C5C;
 $blue-2: #062469;
+$blue-3: #56C6FF;
 $aqua-1: #64EFBF;
 $aqua-2: #80FFD3;
 $dark-1: #1A1A1A;
@@ -15,6 +16,7 @@ $white: #FFFFFF;
 $theme-colors: (
   "blue-1": $blue-1,
   "blue-2": $blue-2,
+  "blue-3": $blue-3,
   "aqua-1": $aqua-1,
   "aqua-2": $aqua-2,
   "dark-1": $dark-1,
